--- a/Hoofdstukken/F-Methode.tex
+++ b/Hoofdstukken/F-Methode.tex
@@ -1,5 +1,5 @@
-\chapter{Methodiek}
-\label{hoofdstuk:methodiek}
+\chapter{Methodologie}
+\label{hoofdstuk:methodologie}
 \section{Onderzoeksontwerp}
 
-\section{Datverzameling}
+\section{Dataverzameling}
