--- a/Titelpagina/omslag.tex
+++ b/Titelpagina/omslag.tex
@@ -5,6 +5,7 @@
 \usepackage[dutch]{babel} %Taalinstelling
 \usepackage{biblatex} %Om een of andere reden wil deze TeX niet compilen zonder deze package, niet nodig
 \usepackage{csquotes} %Deze is ook nodig om errors tegen te gaan, hoewel hij zelf niet nodig is
+\usepackage[pages=some]{background}
 
 \usepackage{graphicx}
 \graphicspath{ {../Images/} }
@@ -25,6 +26,11 @@
 
 \begin{document}
 \begin{titlepage}
+%\backgroundsetup{contents=\includegraphics{3},angle=0,scale=0.15,opacity=0.5,vshift=195}
+%\backgroundsetup{contents=\includegraphics{2},angle=90,scale=0.27,opacity=0.5}
+%\backgroundsetup{contents=\includegraphics{5},angle=0,scale=0.19,opacity=1,vshift=-400}
+%\BgThispage
+
     \vspace*{-0.9cm}
     \hfill
     \includegraphics[width=0.35\textwidth]{windesheim} \\
