--- a/preamble.sty
+++ b/preamble.sty
@@ -28,6 +28,7 @@
 \usepackage{microtype} %Tegen de underfull errors en voor veel betere justifying
 \usepackage[pages=some]{background} %Achtergrondafbeeldingen bij voorwoord e.d.
 \usepackage{comment} %Om delen van de tekst uit te schakelen
+\usepackage[toc]{glossaries} %Om woorden en acroniemen te definiëren in een woordenlijst
 
 \usepackage[linktoc=all]{hyperref}
 \hypersetup{
