Updates from ShareLaTeX

--- a/Hoofdstukken/E-Probleemanalyse.tex
+++ b/Hoofdstukken/E-Probleemanalyse.tex
@@ -51,12 +51,14 @@ Op basis van het voorgaande wordt voor het onderzoek de volgende hoofdvraag gefo
 
 \noindent
 \begin{center}
-\textnormal{\large{Wat is de kwaliteit van het interne betrouwbaarheidssysteem bij Seafood Connection en hoe kan dit bijdragen dat er op een navolgbare en verantwoordelijke manier wordt omgegaan met vreemde valuta?}}
+{\large{Wat is de kwaliteit van het interne betrouwbaarheidssysteem bij de primaire processen van Seafood Connection en hoe kan dit bijdragen dat er op een navolgbare en verantwoordelijke manier wordt omgegaan met vreemde valuta?}} 
+%33 woorden. Alle belangrijke kenmerken: AOIB (soort: interne betrouwbaarheid, alleen primaire processen, Seafood Connection, doel van treasury, rol van AO in omgang van vreemde valuta)
 \end{center}
 
 \bigskip
 
-Het bredere doel van het onderzoek is om een formele vastlegging van de administratieve organisatie en het treasurybeleid op tafel te krijgen. Hiermee wil de opdrachtgever bereiken dat de vastgelegde AOIB aansluit op de daadwerkelijke situatie, dit is als het ware een stok achter de deur zetten. De \gls{treasuryletter} wordt opgesteld omdat de \gls{geldgoederen} een cruciaal deel van de bedrijfsvoering is die op het moment niet uitgebreid en doordacht is vastgelegd.
+Het bredere doel van het onderzoek is om een formele vastlegging van de administratieve organisatie en het treasurybeleid op tafel te krijgen. Hiermee wil de opdrachtgever bereiken dat de vastgelegde AOIB aansluit op de daadwerkelijke situatie, dit is als het ware een stok achter de deur zetten. De \gls{treasuryletter} wordt opgesteld omdat de \gls{geldgoederen} een cruciaal deel van de bedrijfsvoering is die op het moment niet uitgebreid en doordacht is vastgelegd. Er wordt bij dit onderzoek bijzondere aandacht besteed aan het primaire proces van Seafood Connection B.V. Hier worden onder verstaan: de inkoop-, voorraad-, en verkoopafdeling(en). 
+
 \subsection{De deelvragen}
 De hierbij horende deelvragen die ieder zullen helpen bij het beantwoorden van de hoofdvraag, zijn:
 
@@ -70,6 +72,7 @@ De hierbij horende deelvragen die ieder zullen helpen bij het beantwoorden van d
 
 \newpage
 \section{Theoretische ondersteuning}
+\label{hoofdstuk:theoretischeondersteuning}
 De uitwerking van de deelvragen wordt gedaan aan de hand van het COSO Internal Control Framework \citep{COSOsummery}. De daadwerkelijke invulling hiervan wordt aan de hand van de uiteenzetting in de literatuur van \citet{bivpraktijk} en die van \citet{bivperspectief} verder verdiepend uitgewerkt. 
 
 Voor de uitwerking van het COSO-model wordt ook gesteund op de theorie van Starreveld waarin per \gls{typologie} onder andere wordt uitgewerkt welke preventieve en repressieve maatregelen verwacht worden \citep{jans,financiering,buunk}. Door deze theorie slim te benutten en verschillende typologieën te combineren zal het mogelijk worden om een relevant theoretisch kader voor SFC te maken. 
