--- a/Hoofdstukken/F-Methode.tex
+++ b/Hoofdstukken/F-Methode.tex
@@ -1,5 +1,54 @@
 \chapter{Methodologie}
 \label{hoofdstuk:methodologie}
 \section{Onderzoeksontwerp}
+Bij dit onderzoek wordt er gebruik gemaakt van methoden die passend zijn om de geformuleerde deelvragen en de hoofdvraag te kunnen beantwoorden. De conclusie van de deelvragen worden gebundeld en geven hiermee antwoord op de centrale hoofdvraag. In dit hoofdstuk wordt vermeld welke modellen zullen bijdragen aan de beantwoording en hoe deze helpen bij de beantwoording. De uitwerking hiervan is per deelvraag. 
+
+\bigskip \noindent
+\textbf{Wat zijn de sterke en zwakke punten van de controle-omgeving bij Seafood Connection?} \\
+Zoals eerder besproken in paragraaf \ref{hoofdstuk:theoretischeondersteuning} steunt het volledige interne betrouwbaarheidssyteem op de controle-omgeving. De uitwerking van de controle-omgeving en de bespreking van de resultaten kunnen niet uit een theorieboek gehaald worden. De basis van de controle-omgeving wordt dus onderzocht aan de hand van een \emph{casestudie} (of: \emph{gevalsstudie}). Verder wordt gesteund op een analyse van bestaand materiaal en in mindere door observatie.
+
+\bigskip \noindent 
+\textbf{Welke betrouwbaarheidsrisico's zijn te onderkennen bij Seafood Connection?} \\
+
+
+analyse van bestaand materiaal
+casestudie
+literatuuronderzoek
+inhoudsanalyse
+observatie
+
+\bigskip \noindent
+\textbf{Welke preventieve en repressieve maatregelen worden getroffen om de \gls{ic} in stand te houden?} \\
+inkoopcontracten
+
+analyse van bestaand materiaal
+enquete
+literatuuronderzoek
+inhoudsanalyse
+observatie
+
+\bigskip \noindent
+\textbf{Welke maatregelen zijn getroffen om er voor te zorgen dat er voldoende informatie en communicatie is binnen de organisatie?} \\
+
+analyse van bestaand materiaal
+open interview
+inhoudsanalyse
+observatie
+
+\bigskip \noindent
+\textbf{Hoe wordt er voor gezorgd dat het interne betrouwbaarheidssysteem regelmatig geëvalueerd en gemonitord wordt?} \\
+
+inhoudsanalyse
+analyse van bestaand materiaal
+open interview
+observatie
+
+Bij het verantwoorden van je ontwerp geef je aan welke dataverzamelingsmethode je gekozen hebt en op basis van welke argumenten dit is gebeurd. Zet de beperkingen en mogelijkheden op een rij; denk hierbij niet alleen aan de methodologische argumenten, maar ook aan omstandigheden als tijd, geld etc.
+ Soort: field- dan wel deskresearch
+ Methode: enquête, observatie, documentenanalyse e.d.
+Bespreek de randvoorwaarden (de praktische mogelijkheden en beperkingen).
 
 \section{Dataverzameling}
+ Uitwerken van de gekozen methode: welke meetinstrumenten zijn gebruikt, met welk doel, waarom? Hierbij wordt de techniek bedoeld om een begrip te meten. Dit kan bijvoorbeeld een vraag of een stelling zijn. Je wilt de begrippen uit je inleiding omzetten naar meetbare eenheden. De begrippen worden dus geoperationaliseerd. De gebruikte lijst van vragen of stellingen voeg je als bijlage bij je rapport.
+ Welke deelnemers namen deel aan je onderzoek: je beschrijft hier je onderzoeksgroep. Heb je bijvoorbeeld interviews gehouden, dan beschrijf je uit welke groep de geïnterviewden afkomstig zijn en hoe je hen benaderd hebt.
+ Hoe is de dataverzameling verlopen: je beschrijft welke stappen je hebt genomen om tot je resultaten te komen.
