--- a/Titelpagina/Definities.tex
+++ b/Titelpagina/Definities.tex
@@ -1,6 +1,5 @@
 \def\titel{Het interne betrouwbaarheidssysteem en haar invloeden op de toepassing van hedge accounting}
-\def\ondertitel{Bachelor afstudeeropdracht bij Seafood Connection B.V. over de toepassing van de \\
-AO/IB om in het kader van hedge accounting de treasuryfunctie te vervullen}
+\def\ondertitel{Bachelor afstudeeropdracht over de toepassing van de AO/IB bij de primaire processen van Seafood Connection B.V. om in het kader van hedge accounting de treasuryfunctie te vervullen}
 
 \def\auteur{Gerrit Post}
 \def\studentklas{S1071236 --- AC4V}
