Updates from ShareLaTeX

--- a/Hoofdstukken/G-Resultaten.tex
+++ b/Hoofdstukken/G-Resultaten.tex
@@ -1,11 +1,17 @@
 \chapter{Resultaten}
 \label{hoofdstuk:resultaten}
 \section{De controle-omgeving}
+\import{./}{G1-controle-omgeving}
+
 
 \section{De betrouwbaarheidsrisico's}
+\import{./}{G2-betrouwbaarheidsrisicos}
 
 \section{De organisatorische maatregelen}
+\import{./}{G3-organisatorischemaatregelen}
 
 \section{De informatie en communicatie}
+\import{./}{G4-informatie}
 
 \section{De monitoring}
+\import{./}{G5-monitoring}
